geojson input in view

--- a/views/imagesPage.ejs
+++ b/views/imagesPage.ejs
@@ -19,8 +19,12 @@
 			</div>
 			<div>
 				<label for="desc">Image Description</label>
-				<textarea id="desc" name="desc" value="" rows="2"
-						placeholder="Description" required>
+				<textarea id="desc" name="desc" value="" rows="2" required>
+				</textarea>
+			</div>
+			<div>
+				<label for="location">Image Location</label>
+				<textarea id="location" name="location" rows="2" required>
 				</textarea>
 			</div>
 			<div>
