lan, lat form inputs

--- a/views/imagesPage.ejs
+++ b/views/imagesPage.ejs
@@ -23,9 +23,12 @@
 				</textarea>
 			</div>
 			<div>
-				<label for="location">Image Location</label>
-				<textarea id="location" name="location" rows="2" required>
-				</textarea>
+				<label for="longitude">Logitude</label>
+				<input type="text" id="longitude" name="longitude" required/>
+			</div>
+			<div>
+				<label for="latitude">Latitude</label>
+				<input id="latitude" name="latitude" required/>
 			</div>
 			<div>
 				<label for="image">Upload Image</label>
